# vertexai

./: .dockerignore  .gitignore  ANALYSIS_QUICK_START.md  ANALYSIS_WORKFLOW_SUMMARY.md  ARCHITECTURE_CODE_REVIEW.md  CLOUD_SQL_PGVECTOR_SCHEMA.md  DEPLOYMENT_RUNBOOK.md  Dockerfile.lead-match  EMBEDDING_API_INVESTIGATION.md  GAP_VERIFICATION_REPORT.md  GCP_JOBS_AND_DATABASES.md  IMPLEMENTATION_CHANGES_SUMMARY.md  IMPLEMENTATION_PLAN.md  JOBS_AND_DATAFLOW_README.md  LEADMGMT_SCHEMA_COMPLIANCE_VERIFICATION.md  README.md  RISKS_AND_RECOMMENDATIONS.md  SCHEMA_COMPLIANCE_REPORT.md  SCRIPT_INVENTORY.md  TESTING_QUICK_START.md  check_data.py  check_tables.py  cloudbuild.lead-match-monitoring.yaml  cloudbuild.lead-match-reporting.yaml  cloudbuild.lead-match.yaml
lead_match_codebase/: README.md  compile.py  main.py  pyproject.toml  requirements.txt  run_compile_kfp.bat
lead_match_codebase/custom_image_kfp/: Dockerfile  requirements.txt
lead_match_codebase/src/Costco_Lead_Managment.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
lead_match_codebase/src/config/: app_adt.properties  app_lab.properties  config.ini  config_lead_mgmt_dev.ini  config_lead_mgmt_qa.ini  configuration.ini  configuration_adt.ini  costco_lead_to_pos_semantic_match.json  lead_matching_config.properties  lead_matching_config_adt.properties  lead_matching_config_qa.properties  sync_config.ini
lead_match_codebase/src/costco/: snow_to_gcp_sync.ini
lead_match_codebase/src/costco/leadmgmt/: lead_management.py  load_lead_data.py  load_pos_data.py  sync_gcp_snow.py  sync_snow_gcp.py  sync_snow_gcp_old.py  sync_snow_gcp_v2.py
lead_match_codebase/src/costco/leadmgmt/components/: UPDATE_SOURCE_DATA_ANALYSIS.md  data_ingestion_cloud_sql.py  failure_handler.py  fuzzy_matching_sql.py  lead_matching.py  primary_matching.py  streaming_partition.py  temporary_file_deletion.py  test_service_now_connectivity.py  update_servicenow.py  update_source_data.py  validation_del_temp_files.py  vector_db_loading_leads.py  vector_db_loading_pos.py
(+479 files in other folders)
